      a RemoteRepository uses this to stream the operation.
      (Andrew Bennetts, Robert Collins)

    * There is a RemoteSink object which handles pushing to smart servers.
      (Andrew Bennetts, Robert Collins)

    * ``bzrlib.tests.run_suite`` accepts a runner_class parameter
      supporting the use of different runners. (Robert Collins)

    * New hook Commands['extend_command'] to allow plugins to access a
      command object before the command is run (or help generated from
      it), without overriding the command. (Robert Collins)

    * ``RemoteBranchFormat`` no longer claims to have a disk format string.
      (Robert Collins)

    * ``Repository`` objects now have ``suspend_write_group`` and
      ``resume_write_group`` methods.  These are currently only useful
      with pack repositories. (Andrew Bennetts, Robert Collins)

    * ``RepositoryFormat`` objects now have a ``network_name`` for passing
      the format across RPC calls. (Robert Collins, Andrew Bennetts)

    * ``RepositoryFormat`` objects now all have a new attribute
      ``_serializer`` used by fetch when reserialising is required.
      (Robert Collins, Andrew Bennetts)

    * Some methods have been pulled up from ``BzrBranch`` to ``Branch``
      to aid branch types that are not bzr branch objects (like
      RemoteBranch). (Robert Collins, Andrew Bennetts)

    * The ``_index`` of ``KnitVersionedFiles`` now supports the ability
      to scan an underlying index that is going to be incorporated into
      the ``KnitVersionedFiles`` object, to determine if it has missing
      delta references. The method is ``scan_unvalidated_index``.
      (Andrew Bennetts, Robert Collins)

    * ``VersionedFiles`` record adapters have had their signature change
      from ``(record, record.get_bytes_as(record.storage_kind))`` to
      ``(record)`` reducing excess duplication and allowing adapters
      to access private data in record to obtain content more
      efficiently. (Robert Collins)

