@@ -99,6 +99,9 @@ IN DEVELOPMENT
     * ``bzrlib.tests.run_suite`` accepts a runner_class parameter
       supporting the use of different runners. (Robert Collins)
 
+    * New branch method ``create_clone_on_transport`` that returns a
+      branch object. (Robert Collins)
+
     * New hook Commands['extend_command'] to allow plugins to access a
       command object before the command is run (or help generated from
       it), without overriding the command. (Robert Collins)
